--- a/ERP/nbproject/project.properties
+++ b/ERP/nbproject/project.properties
@@ -28,11 +28,13 @@ dist.jar=${dist.dir}/ERP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.itextpdf-5.5.9.jar=..\\..\\Desktop\\itextpdf-5.5.9.jar
+file.reference.itextpdf-5.5.9.jar-1=src\\externals\\itextpdf-5.5.9.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.itextpdf-5.5.9.jar}
+    ${file.reference.itextpdf-5.5.9.jar}:\
+    ${file.reference.itextpdf-5.5.9.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -42,7 +44,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
