--- a/ERP/nbproject/project.properties
+++ b/ERP/nbproject/project.properties
@@ -27,14 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/ERP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.itextpdf-5.5.9.jar=..\\..\\Desktop\\itextpdf-5.5.9.jar
-file.reference.itextpdf-5.5.9.jar-1=src\\externals\\itextpdf-5.5.9.jar
+file.reference.itextpdf-5.5.9.jar=src\\externals\\itextpdf-5.5.9.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.itextpdf-5.5.9.jar}:\
-    ${file.reference.itextpdf-5.5.9.jar-1}
+    ${file.reference.itextpdf-5.5.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
