--- a/ERP/nbproject/project.properties
+++ b/ERP/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ERP
+application.vendor=Dominik
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,13 +27,16 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/ERP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.itextpdf-5.5.9.jar=src\\externals\\itextpdf-5.5.9.jar
+file.reference.javax.mail.jar=src/externals/javax.mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.itextpdf-5.5.9.jar}
+    ${file.reference.itextpdf-5.5.9.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
